# lake_softcenter

./: .gitignore  README.md  pyproject.toml
.astro/: config.yaml  test_dag_integrity_default.py
include/firebird_to_postgres/: extract_load.py  main.py  source.py
tests/firebird_to_postgres/: test_extract_load.py  test_source.py
